# namada-governance-upgrades

./: .earthlyignore  .gitignore  Cargo.toml  Earthfile  README.md  rust-toolchain.toml
.github/workflows/: build.yml
block_party/: Cargo.toml
block_party/src/: lib.rs
builder/: build_proposal.py  build_proposals.py
builder/parameters/: block-party.json  hf-gas-token.json  nam-party.json  phase2.json  phase3.json  phase4.json  phase5.json  shielding-party.json  shielding-reward-party.json  shielding-rewards-party.json  staking-party.json  update-tx-claim-rewards.json
check-onchain-wasm/: Cargo.toml  README.md
check-onchain-wasm/src/: config.rs  main.rs
default_ibc_rate_limits/: Cargo.toml
default_ibc_rate_limits/src/: lib.rs
docker/: download-wasmopt.sh  optimize.sh  run-washopt.sh  run-wasmopt.sh
enable_ibc/: Cargo.toml
enable_ibc/src/: lib.rs
hf-atoms-gas-token/: Cargo.toml
hf-atoms-gas-token/src/: lib.rs
hf-uusdc-gas-token/: Cargo.toml
hf-uusdc-gas-token/src/: lib.rs
hf_cosmos_unlimited_channel/: Cargo.toml
hf_cosmos_unlimited_channel/src/: lib.rs
hf_revival/: Cargo.toml
hf_revival/src/: lib.rs
ibc_rate_limits/: Cargo.toml
ibc_rate_limits/src/: lib.rs
increase_target_staked_ratio/: Cargo.toml
increase_target_staked_ratio/src/: lib.rs
max_block_gas/: Cargo.toml
max_block_gas/src/: lib.rs
nam_ibc_rate_limits/: Cargo.toml
nam_ibc_rate_limits/src/: lib.rs
nam_party/: Cargo.toml
nam_party/src/: lib.rs
nam_rate_limits/: Cargo.toml
nam_rate_limits/src/: lib.rs
phase2/: Cargo.toml
phase2/src/: lib.rs
phase3/: Cargo.toml
phase3/src/: lib.rs
phase4/: Cargo.toml
phase4/src/: lib.rs
phase4_retry/: Cargo.toml
phase4_retry/src/: lib.rs
phase5/: Cargo.toml
phase5-1/: Cargo.toml
phase5-1/src/: lib.rs
phase5-2/: Cargo.toml
phase5-2/src/: lib.rs
phase5a/: Cargo.toml
phase5b/: Cargo.toml
phase5b/src/: lib.rs
pre-phase4/: Cargo.toml
pre-phase4/src/: lib.rs
proposals/mainnet/add-uusdn-token/: Cargo.toml  data.json
proposals/mainnet/add-uusdn-token/src/: lib.rs
proposals/mainnet/update-staking-inflation-parameters/: Cargo.toml
proposals/mainnet/update-staking-inflation-parameters/src/: lib.rs
proposals/mainnet_phases/phase2/: Cargo.toml  data.json
proposals/mainnet_phases/phase2/src/: lib.rs
proposals/template/update-params/: Cargo.toml  data.json
proposals/template/update-params/src/: lib.rs
proposals/template/update-wasm/: Cargo.toml  data.json
proposals/template/update-wasm/src/: lib.rs
proposals/testnet/increase-masp-fee-limit/: Cargo.toml
proposals/testnet/increase-masp-fee-limit/src/: lib.rs
reduce_staking_rewards/: Cargo.toml
reduce_staking_rewards/src/: lib.rs
shielding_party/: Cargo.toml
shielding_reward_party/: Cargo.toml
shielding_rewards_party/: Cargo.toml
staking_party/: Cargo.toml
state_migration/: dryrun_migration46.json
update-gas-costs/: Cargo.toml
update-gas-costs/src/: lib.rs
update-tx-claim-rewards/: Cargo.toml
update-tx-claim-rewards-2/: Cargo.toml
update-tx-ibc/: Cargo.toml
update-tx-ibc/src/: lib.rs  tx_ibc.4c87e0b10faacd235e2d20ba24cbd708daec9227e9988bd6399315b92ad211eb.wasm  tx_ibc.eb6752bbf646d34dd37aba9b40958d9e54bbb2d7513a5f2b89e4a3681d2e1ced.wasm  tx_ibc.f064a9c62718ad4d88076b401123caba6cc73f76b347d0d8fd0d76888740327b.wasm
update-tx-transfer/: Cargo.toml
update-tx-withdraw/: Cargo.toml
update-tx-withdraw/src/: lib.rs  tx_withdraw.991043b8dc468f5d0ad54b22bfbe75b355a535126c6d3e9dcf511a00d6c8b331.wasm  tx_withdraw.a8686ae87aa940e3c45adb79cb5e1daa71033d41fe85f6b32713ae3cef21ff25.wasm
update-wasm/: Cargo.toml
update_gas_params/: Cargo.toml
update_gas_params/src/: lib.rs
update_ibc_rate_limits/: Cargo.toml
wasms/: tx_become_validator.a984e84a2b3c3941f28865d175c92bfc5ade13f6ca55fb1730d65297529f88ce.wasm  tx_bond.1218c605e1cb5bff9bafea9cfe97866900e4ebf75da291be83ee1e6fea9a3f3e.wasm  tx_bridge_pool.3ba5b8ff743fdf560ff329ba744fc408ea223bebcaaffb7a06fb3e4386b8c1bd.wasm  tx_change_consensus_key.773b7bba10c55f7321a48be33618ed41ce445fa8e796facfa9ede1c2d70581ce.wasm  tx_change_validator_commission.20531910692cbe039e77b3d13d594a02397efab2d36e7282c86d0fdd640185d6.wasm  tx_change_validator_metadata.ec6b2d45c168506b35d94fb650f59a16455af1abc7546a20a649fc08422f8522.wasm  tx_claim_rewards.af4cd35b30f17cf2440be74bedeb74296aac21e4ab1ea7143f3a3dede722a0ed.wasm  tx_deactivate_validator.364fcf7025309ff3202a2b786e4221cf8f2897cee67ab99a50d339e27bedd038.wasm  tx_ibc.2fac9cb9797cb01104cfe67f7b9693c76d9dfcad7e01f894fcbc0a7675bcb184.wasm  tx_init_account.4078c07a356691b23049055df6fc7fb99c32b75f488f435538c1a960cdb41153.wasm  tx_init_proposal.5686195c4a5c27eabf8b2c319b23b352ac9879417df88852d4c5a649278f34d6.wasm  tx_reactivate_validator.a41bab73ac80e335b2f87c6c99d771e51ec841124b24a5680322f2f45dea08c9.wasm  tx_redelegate.7b632cc9a5177d7bec78b0b0fd76ac776a3f2a6520ef0d3d24347490c781c41b.wasm  tx_resign_steward.b5dbddb91e2627d400fa6ca83970a8396dd968ab25ff896b845b19a813729e04.wasm  tx_reveal_pk.d9895cd913c9a11e511aa8fcd92b2c037323e0b777e600655c15d9403eeb8e5e.wasm  tx_transfer.8198890dbdf67bc93b16492496413c8140a273465f0f8f3ae091e5949a5ac4e0.wasm  tx_unbond.a2b1e52d50fbad62b5090c6c7e1c659e982ed4113893a0232eb14c5f8f90161c.wasm  tx_unjail_validator.bf75093fb07a8554b804ea644a05b364b57d0e3fd1596889840a7c296abb8e68.wasm  tx_update_account.04256c4087de46e71e6f323b696ec412e41cfd3ec337010c1f2a590037c0cf8c.wasm  tx_update_steward_commission.01e2395fab96f0ac8251329370149144159d378abcf5a414df1c030a329bda82.wasm  tx_vote_proposal.04cad8c777a4c43df949be686569afda000b113d0e9886a4cac0f16883462c28.wasm  tx_withdraw.3beab394cbc85643c11ab05f047737c79f1a5cae8462d9544d00e3f22346c62a.wasm  vp_implicit.447fee689d7a9d0e28ff16cb064de59da4347824dd7edf64dea90520cbe31632.wasm  vp_user.f0e9dced0cc1c2573e089126fec4a75824fe17e84e7a963eb26cba69d551af05.wasm
whitelist-hf-channels/: Cargo.toml
whitelist-hf-channels/src/: lib.rs
whitelist-hf-cosmoshub/: Cargo.toml
whitelist-hf-nobletestnet/: Cargo.toml
whitelist-hf-nobletestnet/src/: lib.rs
whitelist-tokens/: Cargo.toml
(+38 files in other folders)
