[workspace]
resolver = "2"

members = [
    "proposals/testnet/add-uusdc-gas-token",
    "proposals/mainnet/update-staking-inflation-parameters",
    "proposals/mainnet/add-uusdn-token",
    "proposals/template/update-wasm",
    "proposals/testnet/increase-masp-fee-limit",
]

[workspace.package]
authors = ["Heliax AG <hello@heliax.dev>"]
edition = "2021"
license = "GPL-3.0"
version = "1.0.0"

[workspace.dependencies]
namada_tx_prelude_01502 = { package = "namada_tx_prelude", git = "https://github.com/anoma/namada", tag = "libs-v0.150.2" }
namada_tx_prelude_02512 = { package = "namada_tx_prelude", git = "https://github.com/anoma/namada", tag = "libs-v0.251.2" }

rlsf = "0.2.1"
getrandom = { version = "0.2", features = ["custom"] }
lazy_static = "1.4.0"

[profile.release]
lto = true
panic = "abort"
opt-level = 'z'
strip = "debuginfo"
