[workspace]
resolver = "2"

members = [
    "proposals/template/update-wasm",
    "proposals/template/update-params",
    "proposals/template/whitelist-token",
    "proposals/mainnet_phases/phase2",
    "proposals/mainnet_phases/phase3",
    "proposals/mainnet_phases/phase4",
    "proposals/mainnet_phases/phase5a",
    "proposals/mainnet_phases/phase5b",
    "proposals/mainnet/add-uusdn-token"
]

[workspace.package]
authors = ["Heliax AG <hello@heliax.dev>"]
edition = "2021"
license = "GPL-3.0"
version = "1.0.0"

[workspace.dependencies]
namada_tx_prelude_01502 = { package = "namada_tx_prelude", git = "https://github.com/anoma/namada", tag = "libs-v0.150.2" }
namada_tx_prelude_02512 = { package = "namada_tx_prelude", git = "https://github.com/anoma/namada", tag = "libs-v0.251.2" }
namada_proof_of_stake_01502 = { package = "namada_proof_of_stake", git = "https://github.com/anoma/namada", tag = "libs-v0.150.2" }
namada_proof_of_stake_02512 = { package = "namada_proof_of_stake", git = "https://github.com/anoma/namada", tag = "libs-v0.251.2" }

rlsf = "0.2.1"
getrandom = { version = "0.2", features = ["custom"] }
lazy_static = "1.4.0"

[profile.release]
lto = true
panic = "abort"
opt-level = 'z'
strip = "debuginfo"
