[package]
name = "block_party"
description = "WASM transaction to transition from phase 1 to phase 2 of namada mainnet."
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
namada_tx_prelude.workspace = true
wee_alloc.workspace = true
getrandom.workspace = true

[lib]
crate-type = ["cdylib"]
