[package]
name = "default_ibc_rate_limits"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
namada_tx_prelude.workspace = true
namada_ibc.workspace = true
rlsf.workspace = true
getrandom.workspace = true

[lib]
crate-type = ["cdylib"]