[package]
name = "hf_cosmos_unlimited_channel"
description = "WASM transaction to whitelist new CosmosHub channel (Oct 20 2025)."
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
namada_ibc.workspace = true
namada_tx_prelude.workspace = true
rlsf.workspace = true
getrandom.workspace = true

[lib]
crate-type = ["cdylib"]
