[package]
name = "whitelist-hf-channels"
description = "WASM transaction to whitelist channels for Osmosis testnet, Babylon mainnet, and Cosmos Hub mainnet."
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
namada_tx_prelude.workspace = true
namada_proof_of_stake.workspace = true
rlsf.workspace = true
getrandom.workspace = true

[lib]
crate-type = ["cdylib"]
